logs/schemato.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LEPL-5.1.3.egg-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/lepl'...
Listing './lib/python3.5/site-packages/lepl/_example'...
Listing './lib/python3.5/site-packages/lepl/_test'...
Listing './lib/python3.5/site-packages/lepl/apps'...
Listing './lib/python3.5/site-packages/lepl/apps/_test'...
Listing './lib/python3.5/site-packages/lepl/bin'...
Listing './lib/python3.5/site-packages/lepl/bin/_example'...
Listing './lib/python3.5/site-packages/lepl/bin/_test'...
Listing './lib/python3.5/site-packages/lepl/contrib'...
Listing './lib/python3.5/site-packages/lepl/core'...
Listing './lib/python3.5/site-packages/lepl/core/_test'...
Listing './lib/python3.5/site-packages/lepl/lexer'...
Listing './lib/python3.5/site-packages/lepl/lexer/_example'...
Listing './lib/python3.5/site-packages/lepl/lexer/_test'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines/_example'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines/_test'...
Listing './lib/python3.5/site-packages/lepl/matchers'...
Listing './lib/python3.5/site-packages/lepl/matchers/_test'...
Listing './lib/python3.5/site-packages/lepl/regexp'...
Listing './lib/python3.5/site-packages/lepl/regexp/_test'...
Listing './lib/python3.5/site-packages/lepl/stream'...
Listing './lib/python3.5/site-packages/lepl/stream/_test'...
Listing './lib/python3.5/site-packages/lepl/support'...
Listing './lib/python3.5/site-packages/lepl/support/_test'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/schemato'...
Listing './lib/python3.5/site-packages/schemato/schemas'...
Compiling './lib/python3.5/site-packages/schemato/schemas/opengraph.py'...
***   File "./lib/python3.5/site-packages/schemato/schemas/opengraph.py", line 45
    def _is_instance(self, (subj, pred, obj)):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/schemato/utils.py'...
***   File "./lib/python3.5/site-packages/schemato/utils.py", line 4
    def deepest_node((subj, pred, obj), graph):
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schemato-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
